--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.18.6",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
@@ -25,6 +26,8 @@
     "react-native-element-dropdown": "^2.0.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^4.12.2",
     "react-native-reanimated": "~2.8.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.2.4",
