--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "foodmanager",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -18,11 +17,13 @@
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-dev-client": "~1.0.1",
     "expo-status-bar": "~1.3.0",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-date-picker": "^4.2.5",
     "react-native-element-dropdown": "^2.0.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-material-dropdown": "^0.11.1",
@@ -32,7 +33,8 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-splash-screen": "~0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
